setup basic html structure

--- a/app/templates/index.jade
+++ b/app/templates/index.jade
@@ -7,8 +7,10 @@ html
         link(rel='stylesheet', href='/css/stylesheet.css')
 
 body
+    h1 Magical Bedroom Products
 
-    div.container
-        h1 Magical Bedroom Products
+    .products
+
+    .minicart
 
     script(src="/js/bundle.js")
