--- a/app/templates/index.jade
+++ b/app/templates/index.jade
@@ -11,6 +11,10 @@ body
 
     .products.js-products
 
-    .minicart
+    .minicart.js-minicart
+        h3 Cart
+        .minicart__count 0
+        .minicart__items.js-minicart__items
+        .minicart__total $0
 
     script(src="/js/bundle.js")
