update cart count and total

--- a/app/templates/index.jade
+++ b/app/templates/index.jade
@@ -13,8 +13,8 @@ body
 
     .minicart.js-minicart
         h3 Cart
-        .minicart__count 0
+        .minicart__count.js-minicart__count 0
         .minicart__items.js-minicart__items
-        .minicart__total $0
+        .minicart__total.js-minicart__total $0
 
     script(src="/js/bundle.js")
