--- a/app/templates/index.jade
+++ b/app/templates/index.jade
@@ -10,8 +10,9 @@ html
         .products.js-products
 
         .minicart.js-minicart
-            h3 Cart
-            .minicart__count.js-minicart__count 0
+            .minicart__header
+                h3.minicart__title Cart
+                span.minicart__count.js-minicart__count 0
             .minicart__items.js-minicart__items
             .minicart__total.js-minicart__total $0
 
