--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -23,6 +23,10 @@ h2 {
     font-size: $xlarge-font-size;
 }
 
+h3 {
+    font-size: $large-font-size;
+}
+
 button {
     padding: $margin;
     border: 0;
