--- a/app/templates/index.jade
+++ b/app/templates/index.jade
@@ -14,6 +14,7 @@ html
                 h3.minicart__title Cart
                 span.minicart__count.js-minicart__count 0
             .minicart__items.js-minicart__items
-            .minicart__total.js-minicart__total $0
+            .minicart__total Total: 
+                span.minicart__amount.js-minicart__total $0
 
         script(src="/js/bundle.js")
