--- a/app/templates/index.jade
+++ b/app/templates/index.jade
@@ -3,6 +3,7 @@ html
     head
         title Magical Bedroom Products
         meta(name="viewport", content="width=device-width, initial-scale=1")
+        meta(http-equiv="X-UA-Compatible", content="IE=edge")
         link(href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700', rel='stylesheet', type='text/css')
         link(rel='stylesheet', href='/css/stylesheet.css')
 
@@ -10,9 +11,8 @@ html
         .products.js-products
 
         .minicart.js-minicart
-            .minicart__header
-                h3.minicart__title Cart
-                span.minicart__count.js-minicart__count 0
+            h3.minicart__title Cart
+            span.minicart__count.js-minicart__count 0
             .minicart__items.js-minicart__items
             .minicart__total Total: 
                 span.minicart__amount.js-minicart__total $0
